data/derived/comb/progs/unify/prog4232.ml.out
Characters 144-145:
  h::seen
  ^
Error: This expression has type 'a list list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list list
